--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "homepage": "https://github.com/brendonbarreto/robot-eyes-report#readme",
   "dependencies": {
+    "axios": "^0.19.0",
+    "express": "^4.17.1",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
