--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/brendonbarreto/robot-eyes-report#readme",
   "dependencies": {
     "axios": "^0.19.0",
+    "chalk": "^2.4.2",
     "express": "^4.17.1",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
