--- a/package.json
+++ b/package.json
@@ -2,10 +2,7 @@
   "name": "robot-eyes-report",
   "version": "1.0.0",
   "description": "Look what robot found",
-  "main": "main.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "main": "index.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/brendonbarreto/robot-eyes-report.git"
