--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.1",
   "description": "Look what robot found",
   "main": "index.js",
+  "scripts": {
+    "build": "webpack"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/brendonbarreto/robot-eyes-report.git"
@@ -18,11 +21,9 @@
     "axios": "^0.19.0",
     "chalk": "^2.4.2",
     "express": "^4.17.1",
-    "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-twentytwenty": "^1.2.1",
-    "sass-loader": "^7.1.0"
+    "react-twentytwenty": "^1.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.5.4",
@@ -33,6 +34,8 @@
     "babel-loader": "^8.0.6",
     "css-loader": "^3.0.0",
     "minimist": "^1.2.0",
+    "node-sass": "^4.12.0",
+    "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.35.3",
     "webpack-cli": "^3.3.5",
