--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Look what robot found",
   "main": "index.js",
   "scripts": {
-    "build": "webpack"
+    "build": "webpack",
+    "lint": "eslint src"
   },
   "repository": {
     "type": "git",
@@ -33,6 +34,13 @@
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.6",
     "css-loader": "^3.0.0",
+    "eslint": "^7.5.0",
+    "eslint-config-standard": "^14.1.1",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-react": "^7.20.5",
+    "eslint-plugin-standard": "^4.0.1",
     "minimist": "^1.2.0",
     "node-sass": "^4.12.0",
     "sass-loader": "^7.1.0",
